--- a/connectivity/01-conn-introduction-to-neural-networks.ipynb
+++ b/connectivity/01-conn-introduction-to-neural-networks.ipynb
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +479,7 @@
     "        pred = perceptron(x_i, [w1, w2], b)\n",
     "        \n",
     "        ## ADD YOUR CODE HERE\n",
-    "\n",
+    "        error = target - pred\n",
     "        \n",
     "        w1 +=  learning_rate * error * x_i[0]\n",
     "        w2 +=  learning_rate * error * x_i[1]\n",
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "5_Introduction_to_Neuroimaging_Data.ipynb"
+   ]
   }
  ],
  "metadata": {
